# box-model

./: .gitignore  main.py  meson.build  pyproject.toml  setup.py
boxmodel/: __init__.py  __main__.py  main.py  meson.build  run_box_model.py  setup.py  test_numerics.py  test_numerics_vectorized.py  test_scipy_rk.py
boxmodel/boxmodel/: boxmodel.py
boxmodel/model/: __init__.py  base.py  main.py  meson.build  models.py  viewer.py
boxmodel/numerics/: meson.build  setup.py
boxmodel/numerics/integrate/: __init__.py  meson.build  setup.py  solve.py
boxmodel/numerics/integrate/_ivp/: _ivp.cpp  base.cpp  base.hpp  rk.cpp  rk.hpp  rkf45.cpp  rkf45.hpp
docs/latex/: bibliography.bib  document.tex  header.tex  inflow.tex
docs/source/: conf.py  getting_started.rst  index.rst  release.rst
docs/source/dev/: index.rst
docs/source/reference/: boxmodel.model.rst  boxmodel.rst  index.rst
docs/source/tutorial/: index.rst
docs_old/latex/: .gitignore  bibliography.bib  document.tex  header.tex
docs_old/latex/figures/: boxmodelconcentrationnosource.pdf_tex
src/: main.py
src/box_model/: BoxModel.py
src/boxmodel/: __init__.py  boxmodel.py  main.py  viewer.py
