[project]
name = "boxmodel"
version = "0.0.1"
authors = [
  { name="Conor Olive", email="colive@ucmerced.edu" },
]
description = "A small example package"
readme = "README.md"

[project.urls]
"Homepage" = "https://github.com/tortotubus/boxmodel"
"Bug Tracker" = "https://github.com/tortotubus/boxmodel/issues"

dependencies = [
    "matplotlib",
    "numpy",
    "scipy"
]

[build-system]
requires = [
  "setuptools",
  "wheel",
  "pip",
]

[tool.setuptools.packages.find]
where = ["boxmodel"]