[project]
name = "boxmodel"
version = "0.0.1"
authors = [
  { name="Conor Olive", email="colive@ucmerced.edu" },
]
description = "A small example package"
readme = "README.md"

dependencies = [
    "matplotlib",
    "numpy",
    "scipy"
]

[project.urls]
"Homepage" = "https://github.com/tortotubus/boxmodel"
"Bug Tracker" = "https://github.com/tortotubus/boxmodel/issues"

[build-system]
requires = [
  "setuptools",
  "pybind11",
  "wheel",
  "pip",
]