[build-system]
build-backend = 'mesonpy'
requires = [
  "meson-python",
  "pybind11",
  "wheel",
  "numpy",
]

[project]
name = "boxmodel"
license = {file = "LICENSE.txt"}
description = ""
version = "0.0.1"
authors = [
  { name="Conor Olive", email="colive@ucmerced.edu" },
]
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
    "numpy",
    "scipy"
]
readme = "README.md"

[project.urls]
homepage = "https://github.com/tortotubus/boxmodel"
source = "https://github.com/tortotubus/boxmodel"
tracker = "https://github.com/tortotubus/boxmodel/issues"